@@ -1,10 +1,6 @@
 db primarykeys?
 db indexes?
 
-Direct param conversions - BINARY
-Direct result conversions - BINARY
-Conversion tests - BINARY
-
 tdbc::odbc manpage
 
 odbc config_dsn and friends?
